# cookiecutter-mahler-scheduler

./: LICENSE  README.rst  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
laboratorium.facility.{{cookiecutter.plugin_name}}/: README.rst  setup.cfg  setup.py
laboratorium.facility.{{cookiecutter.plugin_name}}/doc/src/: conf.py  index.rst
laboratorium.facility.{{cookiecutter.plugin_name}}/src/laboratorium/facility/{{cookiecutter.plugin_name}}/: __init__.py  ressources.py
mahler.scheduler.{{cookiecutter.plugin_name}}/: LICENSE  README.rst  setup.cfg  setup.py
mahler.scheduler.{{cookiecutter.plugin_name}}/doc/src/: conf.py  index.rst
mahler.scheduler.{{cookiecutter.plugin_name}}/src/mahler/scheduler/{{cookiecutter.plugin_name}}/: __init__.py  resources.py
tests/: test_template.py
